Feat: 페이지 연결

--- a/home.html
+++ b/home.html
@@ -9,7 +9,9 @@
 <body style="background-color: #952a1c">
     <div class="title">크리스마스 트리 꾸미기</div>
     <div class="buttonCenter">
-        <button class="startButton">시작하기</button>
+        <a href="game.html">
+            <button class="startButton">시작하기</button>
+        </a>
     </div>
 </body>
 </html>
