--- a/ornament.html
+++ b/ornament.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./ornament.css" />
-    <title>Ornament</title>
+    <title>MERRY TREE</title>
     <link rel="icon" href="img/ball.png" type="image/png" />
   </head>
   <body style="background-color: #eae2bd">
@@ -12,6 +12,9 @@
     <div class="ornaments"></div>
     <script src="./ornament.js"></script>
     <div class="button">
+      <a href="game.html">
+        <button class="retryButton">재도전하기</button>
+      </a>
       <a href="design.html">
         <button class="treeDesignButton">트리 꾸미러 가기</button>
       </a>
