--- a/design.html
+++ b/design.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./design.css" />
-    <title>design</title>
+    <title>MERRY TREE</title>
     <link rel="icon" href="img/ball.png" type="image/png" />
   </head>
   <body style="background-color: #eae2bd">
@@ -21,6 +21,9 @@
       <div class="depository">
         <div class="image">
           <img src="img/cardFront.png" alt="depository" />
+          <div class="explain">
+            <p>오너먼트 클릭 후 트리의 원하는 부분을 클릭하세요!</p>
+          </div>
         </div>
         <div class="ornaments"></div>
         <div class="captureButtonContainer">
