--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ChristmasTreeDesign</title>
-    <link rel="stylesheet" href="./home.css" />
+    <title>MERRY TREE</title>
+    <link rel="stylesheet" href="./index.css" />
     <link rel="icon" href="img/ball.png" type="image/png" />
   </head>
   <body style="background-color: #952a1c">
     <div class="container">
-      <div class="title">크리스마스 트리 꾸미기</div>
+      <div class="title">MERRY TREE</div>
       <div class="explain">
         <br /><br />
         게임 설명<br />
         카드 매칭 게임에서 같은 모양의 오너먼트를 찾으면 해당 오너먼트로 트리를
         꾸밀 수 있어요!<br />
-        트리 옆에 메세지를 작성한 후 캡처하여 친구에게 보내보세요!
+        트리 옆에 메시지를 작성한 후 캡처하여 소중한 사람에게 보내보세요!
         <br /><br /><br /><br /><br /><br />
       </div>
       <div class="buttonCenter">
