--- a/design.html
+++ b/design.html
@@ -15,7 +15,7 @@
         </div>
         <div class="buttons">
           <button id="againButton">다시 꾸미기</button>
-          <button id="messageButton">메세지 작성하기</button>
+          <button id="messageButton">메시지 작성하기</button>
         </div>
       </div>
       <div class="depository">
