--- a/design.html
+++ b/design.html
@@ -8,6 +8,9 @@
     <link rel="icon" href="img/ball.png" type="image/png" />
   </head>
   <body style="background-color: #eae2bd">
+    <a href="index.html">
+      <button class="homeButton">처음으로 이동하기</button>
+    </a>
     <div class="container">
       <div class="tree">
         <div class="image">
