--- a/ornament.html
+++ b/ornament.html
@@ -8,6 +8,9 @@
     <link rel="icon" href="img/ball.png" type="image/png" />
   </head>
   <body style="background-color: #eae2bd">
+    <a href="index.html">
+      <button class="homeButton">처음으로 이동하기</button>
+    </a>
     <div class="letter">획득한 오너먼트</div>
     <div class="ornaments"></div>
     <script src="./ornament.js"></script>
